Fix scrolling issue with menu on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@ section {
     top: 0;
     width: 100%;
     height: 20px;
-    padding: 10px;
+    padding: 10px 0;
     background-color: var(--osm2pgsql-color-dark);
     text-align: center;
 }
@@ -166,7 +166,10 @@ a#menu-code {
 
 @media screen and (max-width: 999px) {
     nav {
-        width: 100%;
+        width: 400px;
+        height: 400px;
+        overflow: hidden;
+        right: 0;
     }
 
     #menu-toggle {
